<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNegroFondo"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".LongitudActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/longitud"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_longitud"
        app:srcCompat="@drawable/length"
        app:tint="@color/white" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/txt_valor"
        android:textColorHint="@color/colorPrimary">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbKmAm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/txt_KmAm"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="VisualLintButtonSize" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbMaKm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="normal"
        android:text="@string/txt_MaKm"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="VisualLintButtonSize" />


    <TextView
        android:id="@+id/tw_resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="22sp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_calcular"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter"
        android:gravity="center"
        android:onClick="calcularConversion"
        android:text="@string/txt_calcular"
        android:textStyle="bold"
        app:backgroundTint="@color/colorPrimaryDark"
        app:cornerRadius="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_borrar"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:onClick="borrarContenido"
        android:text="@string/txt_borrar"
        android:textStyle="bold"
        app:backgroundTint="@color/colorPrimaryDark"
        app:cornerRadius="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_guardar"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:onClick="guardarDatos"
        android:text="@string/txt_guardar"
        android:textStyle="bold"
        app:backgroundTint="@color/colorPrimaryDark"
        app:cornerRadius="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_mostrar"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:onClick="mostrarDatos"
        android:text="@string/txt_mostrar"
        android:textStyle="bold"
        app:backgroundTint="@color/colorPrimaryDark"
        app:cornerRadius="16dp" />


</LinearLayout>
