<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorNegroFondo"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:background="@drawable/border"
        android:contentDescription="@string/logo_app"
        app:srcCompat="@drawable/icono_app"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tw_opcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="60dp"
        android:text="@string/opcion"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginTop="40dp">


        <RadioButton
            android:id="@+id/rbt_longitud"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/white"
            android:drawableEnd="@drawable/length"
            android:drawableTint="@color/white"
            android:paddingStart="20sp"
            android:paddingEnd="30sp"
            android:text="@string/longitud"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbt_masa"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/weight"
            android:drawableTint="@color/white"
            android:paddingStart="20sp"
            android:paddingEnd="30sp"
            android:text="@string/masa"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbt_temperatura"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/temperature"
            android:drawableTint="@color/white"
            android:paddingStart="20sp"
            android:paddingEnd="30sp"
            android:text="@string/temperatura"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RadioGroup>

</LinearLayout>